# auto-vpn

./: .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app_streamlit.py  entrypoint.sh  fly.toml  plans.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  update_pulumi_plugins.py
.github/workflows/: auto-release.yml  docker-publish.yml  fly-deploy.yml  redeploy.yml  release.yaml  release.yml  ruff.yml
.streamlit/: config.toml
app/: app.py  utils.py
db/: __init__.py  db.py
migrations/: 001_init.py  002_add_server_fields.py
providers/: vultr_manager.py
src/auto_vpn/core/: __init__.py  app.py  periodic_task.py  settings.py  utils.py  vpn_monitor.py  wg_manager.py
src/auto_vpn/db/: __init__.py  db.py  models.py  repository.py
src/auto_vpn/providers/: __init__.py  digitalocean_manager.py  digitalocean_provider.py  infra_manager.py  linode_manager.py  linode_provider.py  provider_base.py  provider_factory.py  provider_types.py  vultr_api.py  vultr_manager.py  vultr_provider.py
src/auto_vpn/web/: auth_manager.py  streamlit_app.py  vpn_manager.py  web.py
tests/db/: conftest.py  test_repository.py
