
[project]
name = "auto-vpn"
version = "0.1.0"
description = "Auto-VPN: On-Demand WireGuard VPN Server Manager"
authors = [
    {name = "Sergei Varibrus"}
]
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "cryptography>=44.0.0",
    "ediri-vultr==2.22.1",
    "paramiko>=3.5.0",
    "peewee>=3.17.8",
    "petname>=2.6",
    "pulumi>=3.140.0",
    "pycountry>=24.6.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
    "streamlit-authenticator>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pulumi-linode>=4.30.1",
    "peewee-migrate>=1.13.0",
    "countryflag>=0.1.2b3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "black>=24.2.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_vpn"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/auto_vpn --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ICN", # flake8-import-conventions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "B904",  # allow raising without from inside except
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
